--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
     "test:watch": "npm run test -- --watch",
-    "generate": "npx plop -- --plopfile generators/plopfile.js",
+    "generate": "npx plop --plopfile ./generators/plopfile.js",
     "storybook": "start-storybook --no-manager-cache -s ./public -p 6006",
     "build-storybook": "build-storybook -s ./public",
     "postinstall": "husky install"
