--- a/package.json
+++ b/package.json
@@ -1,59 +1,96 @@
 {
-  "name": "nextjs-pro-boilerplate",
+  "name": "hubtech",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "lint": "eslint src --max-warnings=0",
-    "test": "jest",
-    "test:watch": "npm run test -- --watch",
-    "generate": "npx plop --plopfile ./generators/plopfile.js",
-    "storybook": "start-storybook --no-manager-cache -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public",
-    "postinstall": "husky install"
+    "next:lint": "next lint",
+    "prepare": "husky install",
+    "test": "jest --maxWorkers=50%",
+    "test:w": "jest --watch --maxWorkers=25%",
+    "test:ci": "jest --runInBand",
+    "sb": "start-storybook -s ./public -p 6006",
+    "build-sb": "build-storybook -s ./public",
+    "generate": "yarn plop --plopfile generators/plopfile.js",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "ngrok": "ngrok http -inspect=false -region sa 3000"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
-    "src/**/*": [
-      "npm run lint --fix",
-      "npm run test --findRelatedTests --bail"
+    "src/**/*.{ts,tsx,css}": [
+      "yarn lint --fix",
+      "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
-    "next": "^11.1.2",
-    "next-pwa": "^5.0.5",
+    "@hookform/resolvers": "^2.6.1",
+    "@styled-icons/ionicons-outline": "^10.34.0",
+    "@styled-icons/remix-line": "^10.18.0",
+    "axios": "^0.21.1",
+    "js-cookie": "^3.0.1",
+    "next": "^11.0.0",
+    "next-pwa": "^5.2.23",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "5.2.1"
+    "react-hook-form": "^7.12.1",
+    "react-toastify": "^7.0.3",
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.17",
-    "@babel/preset-typescript": "^7.12.17",
-    "@storybook/addon-essentials": "^6.3.8",
-    "@storybook/react": "^6.3.8",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.30",
-    "@types/react": "^17.0.2",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-typescript": "^7.14.5",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@next/eslint-plugin-next": "^11.0.1",
+    "@storybook/addon-a11y": "^6.3.2",
+    "@storybook/addon-essentials": "^6.3.2",
+    "@storybook/react": "^6.3.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^26.0.24",
+    "@types/js-cookie": "^2.2.7",
+    "@types/node": "^16.0.0",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "^17.0.13",
+    "@types/styled-components": "^5.1.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "babel-loader": "^8.2.2",
-    "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "babel-plugin-styled-components": "^1.13.1",
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^5.1.1",
-    "jest": "^26.6.3",
-    "jest-styled-components": "^7.0.3",
-    "lint-staged": "^10.5.4",
+    "husky": "^7.0.0",
+    "jest": "^27.0.6",
+    "jest-next-dynamic": "^1.0.1",
+    "jest-styled-components": "^7.0.4",
+    "lint-staged": "^11.0.0",
     "plop": "^2.7.4",
-    "prettier": "^2.2.1",
-    "storybook-addon-next-router": "^3.0.8",
-    "typescript": "^4.1.5"
+    "prettier": "^2.3.2",
+    "storybook-addon-next-router": "^2.0.4",
+    "storybook-dark-mode": "^1.0.8",
+    "storybook-mobile": "^0.1.32",
+    "typescript": "^4.3.5"
   }
 }
