--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.1",
     "react-toastify": "^7.0.3",
+    "small-cache": "^0.1.0",
     "styled-components": "^5.2.1",
     "yup": "^0.32.9"
   },
